force-app/main/default/objects/Opportunity/fields/Approval_Statuscheckbb__c.field-meta.xml
<CustomField>
    <fullName>Approval_Statuscheckbb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>chekbox</label>
    <type>Checkbox</type>
</CustomField>