force-app/main/default/objects/Opportunity/fields/Blank_Date__c.field-meta.xml
<CustomField>
    <fullName>Blank_Date__c</fullName>
    <formula>DATE(2023,1,31)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blank Date</label>
    <type>Date</type>
</CustomField>