force-app/main/default/objects/Opportunity/fields/Commission_status__c.field-meta.xml
<CustomField>
    <fullName>Commission_status__c</fullName>
    <formula>IF(Commission_Amount__c  &gt;= 20000 
,
 &apos;Great Job&apos;,
 &apos;Could be better&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission status</label>
    <type>Text</type>
</CustomField>