force-app/main/default/objects/Opportunity/fields/Order_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Order_Approval_Status__c</fullName>
    <label>Order Approval Status</label>
    <type>TextArea</type>
</CustomField>