force-app/main/default/objects/Opportunity/fields/Tes_tDateTime__c.field-meta.xml
<CustomField>
    <fullName>Tes_tDateTime__c</fullName>
    <formula>DATETIMEVALUE(&quot;2023-12-12&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tes tDateTime</label>
    <type>Date</type>
</CustomField>