force-app/main/default/objects/Opportunity/fields/testbetter__c.field-meta.xml
<CustomField>
    <fullName>testbetter__c</fullName>
    <formula>IF(ISPICKVAL(StageName,&apos;Closed won&apos;),
&apos;Won&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>testbetter</label>
    <type>Text</type>
</CustomField>